--- a/docker-compose/expense-compose.yaml
+++ b/docker-compose/expense-compose.yaml
@@ -14,11 +14,6 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./scripts:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "expense", "--password=ExpenseApp@1"]
-      interval: 10s
-      retries: 5
-
   backend:
     image: backend:1.0
     container_name: expense-backend
@@ -27,13 +22,7 @@ services:
     networks:
       - expense
     depends_on:
-      db:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 10s
-      retries: 5
-
+      - db
   frontend:
     image: frontend:1.0
     container_name: expense-frontend
@@ -42,9 +31,8 @@ services:
     networks:
       - expense
     depends_on:
-      backend:
-        condition: service_healthy
-
+      - backend
+        
 networks:
   expense:
     driver: bridge
