--- a/expense-frontend/Dockerfile
+++ b/expense-frontend/Dockerfile
@@ -4,7 +4,7 @@ RUN rm -rf /etc/nginx/nginx.conf \
     && rm -rf /usr/share/nginx/html/index.html \
     && rm -rf /etc/nginx/conf.d/default.conf
 
-COPY nginx.conf /etc/nginx/nginx.conf
+# COPY nginx.conf /etc/nginx/nginx.conf
 COPY code /usr/share/nginx/html/
 
 
