modifying tags of images

--- a/k8s-manifests/backend/deployment.yaml
+++ b/k8s-manifests/backend/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: expense-backend
-          image: backend:1.0
+          image: siva9666/backend:1.0
           env:
             - name: DB_HOST
               valueFrom:
