--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: frontend:1.0
+          image: siva9666/frontend:1.0
           ports:
             - containerPort: 80
           volumeMounts:
