--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -1,10 +1,15 @@
 FROM alpine:latest
+
 RUN apk update && apk add --no-cache \
     iputils \
     busybox-extras \
     net-tools \
     bind-tools \
     curl \
-    wget
+    wget \
+    mysql-client
+
 WORKDIR /root
+
 CMD ["sh"]
+
